images & navbar color correction

--- a/public/index.html
+++ b/public/index.html
@@ -56,9 +56,9 @@
                             <div class="top_bar_left clearfix">
                                 <div class="logo">
                                     <a id="logo" href="index.html" title="metanoiaHR"><img
-                                            class="logo logo-main scale-with-grid" src="content/hr/images/hr.png" /><img
-                                            class="logo-sticky scale-with-grid" src="content/hr/images/hr.png" /><img
-                                            class="logo-mobile scale-with-grid" src="content/hr/images/hr.png" />
+                                            class="logo logo-main scale-with-grid" src="content/hr/images/hr.png" />
+                                            <img class="logo-sticky scale-with-grid" src="content/hr/images/hr.png" />
+                                            <img class="logo-mobile scale-with-grid" src="content/hr/images/hr.png" />
                                     </a>
                                 </div>
                                 <div class="menu_wrapper">
@@ -95,17 +95,17 @@
                 </div>
                 <div class="mfn-main-slider" id="mfn-rev-slider">
                     <div class="section mcb-section"
-                        style="padding-top:100px; padding-bottom:60px; background-color:#000;  background-position:center top;">
+                        style="padding-top:100px; padding-bottom:60px; background-image: url(images/header.webp);  background-position:center top;">
                         <div class="section_wrapper mcb-section-inner">
                             <div class="wrap mcb-wrap one  valign-top clearfix">
                                 <div class="mcb-wrap-inner">
 
                                     <div class="column mcb-column column_column ">
 
-                                        <h1 style="color: #fff;">Welcome to MetanoiaHR</h1>
-                                        <h2 style="color: #fff;">Elevating Your Business through Strategic HR Solutions.
+                                        <h1 style="color: #000;">Welcome to MetanoiaHR</h1>
+                                        <h2 style="color: #000;">Elevating Your Business through Strategic HR Solutions.
                                         </h2>
-                                        <p>
+                                        <p style="color: #000;">
                                             At MetanoiaHR, we're not just an HR company – we're your partners in growth.
                                             Our mission is to empower small and medium-sized businesses across North
                                             America to unlock their true potential. By tackling the challenges of human
@@ -116,7 +116,7 @@
                                         <a class="button  button_theme button_js"
                                             href="https://calendly.com/metanoiahr/metanoia-chat-with-abdullah"><span
                                                 class="button_label"
-                                                style="background-color: #fff; color: #000;border-radius: 5%;">Book a
+                                                style="background-color: #000; color: #fff;border-radius: 5%;">Book a
                                                 Call</span></a>
                                     </div>
 
@@ -176,7 +176,7 @@
                                                                     class="image_frame image_item no_link scale-with-grid alignnone no_border">
                                                                     <div class="image_wrapper"><img
                                                                             class="scale-with-grid"
-                                                                            src="content/hr/images/home_hr_iconbox1.png"
+                                                                            src="content/hr/images/strategic_recruiting.png"
                                                                             width="100" height="100" /> </div>
                                                                 </div>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
@@ -204,7 +204,7 @@
                                                                     class="image_frame image_item no_link scale-with-grid alignnone no_border">
                                                                     <div class="image_wrapper"><img
                                                                             class="scale-with-grid"
-                                                                            src="content/hr/images/home_hr_iconbox2.png"
+                                                                            src="content/hr/images/empowerment_coaching.png"
                                                                             width="100" height="100" /> </div>
                                                                 </div>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
@@ -232,7 +232,7 @@
                                                                     class="image_frame image_item no_link scale-with-grid alignnone no_border">
                                                                     <div class="image_wrapper"><img
                                                                             class="scale-with-grid"
-                                                                            src="content/hr/images/home_hr_iconbox3.png"
+                                                                            src="content/hr/images/job_seeker.png"
                                                                             width="100" height="100" /> </div>
                                                                 </div>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
@@ -458,8 +458,8 @@
                         <aside class="widget widget_text">
                             <div class="textwidget">
                                 <div class="image_frame image_item no_link scale-with-grid alignnone no_border">
-                                    <div class="image_wrapper"><img class="scale-with-grid"
-                                            src="content/hr/images/home_hr_footer_logo.png" width="90" height="59" />
+                                    <div class="image_wrapper"><img class="footer-grid"
+                                            src="content/hr/images/hr_footer.png" width="90" height="59" />
                                     </div>
                                 </div>
                                 <hr class="no_line" style="margin: 0 auto 20px;" />
