--- a/public/services.html
+++ b/public/services.html
@@ -103,8 +103,7 @@
                                                     class="image_frame image_item no_link scale-with-grid alignnone no_border width">
                                                     <div style="margin-top: 50px;" class="image_wrapper"><img
                                                             class="scale-with-grid"
-                                                            src="content/hr/images/home_hr_iconbox1.png" width="100"
-                                                            height="100" /> </div>
+                                                            src="/public/images/Strategic-recruiting.webp" /> </div>
                                                 </div>
                                                 <div class="column_attr align_center width">
                                                     <hr class="no_line" style="margin: 0 auto 30px;" />
@@ -124,8 +123,7 @@
                                                 class="image_frame image_item no_link scale-with-grid alignnone no_border width">
                                                 <div style="margin-top: 50px;" class="image_wrapper"><img
                                                         class="scale-with-grid"
-                                                        src="content/hr/images/home_hr_iconbox2.png" width="100"
-                                                        height="100" /> </div>
+                                                        src="/public/images/empowerment-coaching.webp"  /> </div>
                                             </div>
                                             <div class="column_attr align_center width">
                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
@@ -143,8 +141,8 @@
                                         <div
                                             class="image_frame image_item no_link scale-with-grid alignnone no_border width">
                                             <div style="margin-top: 50px;" class="image_wrapper"><img
-                                                    class="scale-with-grid" src="content/hr/images/home_hr_iconbox3.png"
-                                                    width="100" height="100" /> </div>
+                                                    class="scale-with-grid" src="/public/images/job-seeker.webp"
+                                                     /> </div>
                                         </div>
                                         <div class="column_attr align_center width">
                                             <hr class="no_line" style="margin: 0 auto 30px;" />
@@ -181,8 +179,8 @@
                     <aside class="widget widget_text">
                         <div class="textwidget align_right">
                             <div class="image_frame image_item no_link scale-with-grid alignnone no_border">
-                                <div class="image_wrapper"><img class="scale-with-grid"
-                                        src="content/hr/images/home_hr_footer_logo.png" width="90" height="59" />
+                                <div class="image_wrapper"><img class="footer-grid"
+                                        src="content/hr/images/hr_footer.png" width="90" height="59" />
                                 </div>
                             </div>
                             <hr class="no_line" style="margin: 0 auto 20px;" />
