service page fixed

--- a/public/services.html
+++ b/public/services.html
@@ -94,58 +94,69 @@
                             <div class="section_wrapper mcb-section-inner align_center">
 
                                 <div class="wrap mcb-wrap one  valign-top clearfix">
-                                    <div class="mcb-wrap-inner">
+                                    <!-- <div class="mcb-wrap-inner"> -->
 
-                                        <div class="">
+                                    <!-- <div id="strategic_recruiting"> -->
 
-                                            <div class="services" style="background-color: #F6FAFE; margin-bottom: 20px;">
-                                                <div
-                                                    class="image_frame image_item no_link scale-with-grid alignnone no_border width">
-                                                    <div style="margin-top: 50px;" class="image_wrapper"><img
-                                                            class="scale-with-grid"
-                                                            src="/public/images/Strategic-recruiting.webp" /> </div>
-                                                </div>
-                                                <div class="column_attr align_center width">
-                                                    <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                    <h4 style="color: #000;">STRATEGIC RECRUITING</h4>
-                                                    <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                    <p style="color: #000; text-align: left; font-size: 16px;">
-                                                        Our strategic recruitment services go beyond finding talent; we create a strategic advantage for your business. We identify, attract, and match top-tier candidates to your unique needs, ensuring your team is equipped for success.
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="services" style="background-color: #e2e6e7 ; margin-bottom: 20px;">
-                                            <div class="column_attr align_center width">
-                                                <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                <h4 style="color: #000;">EMPOWERMENT COACHING</h4>
-                                                <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                <p style="color: #000; text-align: left; font-size: 16px;">
-                                                    Elevate your team's performance through our empowerment coaching. Our tailored programs inspire and refine skills, fostering a workplace culture of excellence. Let us help you unlock the full potential of your employees.
-                                                </p>
-                                            </div>
-                                            <div
-                                                class="image_frame image_item no_link scale-with-grid alignnone no_border width">
-                                                <div style="margin-top: 50px;" class="image_wrapper"><img
-                                                        class="scale-with-grid"
-                                                        src="/public/images/empowerment-coaching.webp"  /> </div>
-                                            </div>
-                                            
-                                        </div>
-                                    </div>
-                                    <div class="services" style="background-color: #e6eff7; margin-bottom: 20px;">
+                                    <div class="services" id="strategic_recruiting"
+                                        style="background-color: #F6FAFE; margin-bottom: 20px;">
                                         <div
                                             class="image_frame image_item no_link scale-with-grid alignnone no_border width">
                                             <div style="margin-top: 50px;" class="image_wrapper"><img
-                                                    class="scale-with-grid" src="/public/images/job-seeker.webp"
-                                                     /> </div>
+                                                    class="scale-with-grid"
+                                                    src="/public/images/Strategic-recruiting.webp" /> </div>
                                         </div>
                                         <div class="column_attr align_center width">
                                             <hr class="no_line" style="margin: 0 auto 30px;" />
-                                            <h4 style="color: #000;">JOB SEEKER SUPPORT</h4>
+                                            <h4 style="color: #000; width: 100%">STRATEGIC RECRUITING</h4>
                                             <hr class="no_line" style="margin: 0 auto 30px;" />
-                                            <p style="color: #000; text-align: left; font-size: 16px;">
-                                                For job seekers, we're not just a service; we're your partners in success. Our guidance, preparation, and personalized job matching services empower you to find the perfect role and take your career to new heights.
+                                            <p class="service_text">
+                                                Our strategic recruitment services go beyond finding talent; we
+                                                create a strategic advantage for your business. We identify,
+                                                attract, and match top-tier candidates to your unique needs,
+                                                ensuring your team is equipped for success.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <!-- </div> -->
+                                    <div class="services" id="empowerment_coaching"
+                                        style="background-color: #e2e6e7 ; margin-bottom: 20px;">
+                                        <div class="column_attr align_center width">
+                                            <hr class="no_line" style="margin: 0 auto 30px;" />
+                                            <h4 style="color: #000; width: 100%">EMPOWERMENT COACHING</h4>
+                                            <hr class="no_line" style="margin: 0 auto 30px;" />
+                                            <p class="service_text">
+                                                Elevate your team's performance through our empowerment coaching.
+                                                Our tailored programs inspire and refine skills, fostering a
+                                                workplace culture of excellence. Let us help you unlock the full
+                                                potential of your employees.
+                                            </p>
+                                        </div>
+                                        <div
+                                            class="image_frame image_item no_link scale-with-grid alignnone no_border width">
+                                            <div style="margin-top: 50px;" class="image_wrapper"><img
+                                                    class="scale-with-grid"
+                                                    src="/public/images/empowerment-coaching.webp" /> </div>
+                                        </div>
+
+                                    </div>
+                                    <!-- </div> -->
+                                    <div class="services"id="job_seeker" style="background-color: #e6eff7; margin-bottom: 20px;">
+                                        <div
+                                            class="image_frame image_item no_link scale-with-grid alignnone no_border width">
+                                            <div style="margin-top: 50px;" class="image_wrapper"><img
+                                                    class="scale-with-grid" src="/public/images/job-seeker.webp" />
+                                            </div>
+                                        </div>
+                                        <div class="column_attr align_center width">
+                                            <hr class="no_line" style="margin: 0 auto 30px;" />
+                                            <h4 style="color: #000; width: 100%;">JOB SEEKER SUPPORT</h4>
+                                            <hr class="no_line" style="margin: 0 auto 30px;" />
+                                            <p class="service_text">
+                                                For job seekers, we're not just a service; we're your partners in
+                                                success. Our guidance, preparation, and personalized job matching
+                                                services empower you to find the perfect role and take your career to
+                                                new heights.
                                             </p>
                                         </div>
                                     </div>
