--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
                                         <h1 style="color: #000;">Welcome to MetanoiaHR</h1>
                                         <h2 style="color: #000;">Elevating Your Business through Strategic HR Solutions.
                                         </h2>
-                                        <p style="color: #000;">
+                                        <p style="color: #000; font-size: 15px;">
                                             At MetanoiaHR, we're not just an HR company – we're your partners in growth.
                                             Our mission is to empower small and medium-sized businesses across North
                                             America to unlock their true potential. By tackling the challenges of human
@@ -116,7 +116,7 @@
                                         <a class="button  button_theme button_js"
                                             href="https://calendly.com/metanoiahr/metanoia-chat-with-abdullah"><span
                                                 class="button_label"
-                                                style="background-color: #000; color: #fff;border-radius: 5%;">Book a
+                                                style="background-color: #000; color: #fff; border-radius: 50px; ">Book a
                                                 Call</span></a>
                                     </div>
 
@@ -333,7 +333,7 @@
                                 <center>
                                     <a class="button button_js"
                                         href="https://calendly.com/metanoiahr/metanoia-chat-with-abdullah"><span
-                                            class="button_label">Book a Call</span></a>
+                                            class="button_label" style="border-radius: 50px; color: #000; border-radius: 50px;">Book a Call</span></a>
                                 </center>
                             </div>
                         </div>
