--- a/public/services.html
+++ b/public/services.html
@@ -94,22 +94,22 @@
                             <div class="section_wrapper mcb-section-inner align_center">
 
                                 <div class="wrap mcb-wrap one  valign-top clearfix">
-                                    <!-- <div class="mcb-wrap-inner"> -->
 
-                                    <!-- <div id="strategic_recruiting"> -->
 
                                     <div class="services" id="strategic_recruiting"
                                         style="background-color: #F6FAFE; margin-bottom: 20px;">
                                         <div
-                                            class="image_frame image_item no_link scale-with-grid alignnone no_border width">
+                                            class="image_frame image_item no_link scale-with-grid alignnone no_border service_img">
                                             <div style="margin-top: 50px;" class="image_wrapper"><img
                                                     class="scale-with-grid"
                                                     src="/public/images/Strategic-recruiting.webp" /> </div>
                                         </div>
                                         <div class="column_attr align_center width">
-                                            <hr class="no_line" style="margin: 0 auto 30px;" />
-                                            <h4 style="color: #000; width: 100%">STRATEGIC RECRUITING</h4>
-                                            <hr class="no_line" style="margin: 0 auto 30px;" />
+                                            <hr class="no_line" />
+                                            <div class="group">
+                                                <h4 class="first">STRATEGIC </h4>
+                                                <h4 class="sec">RECRUITING </h4>
+                                            </div>
                                             <p class="service_text">
                                                 Our strategic recruitment services go beyond finding talent; we
                                                 create a strategic advantage for your business. We identify,
@@ -118,13 +118,14 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <!-- </div> -->
                                     <div class="services" id="empowerment_coaching"
                                         style="background-color: #e2e6e7 ; margin-bottom: 20px;">
                                         <div class="column_attr align_center width">
-                                            <hr class="no_line" style="margin: 0 auto 30px;" />
-                                            <h4 style="color: #000; width: 100%">EMPOWERMENT COACHING</h4>
-                                            <hr class="no_line" style="margin: 0 auto 30px;" />
+                                            <div class="group">
+                                                <h4 class="first">EMPOWERMENT </h4>
+                                                <h4 class="sec">COACHING </h4>
+                                            </div>
+
                                             <p class="service_text">
                                                 Elevate your team's performance through our empowerment coaching.
                                                 Our tailored programs inspire and refine skills, fostering a
@@ -132,26 +133,27 @@
                                                 potential of your employees.
                                             </p>
                                         </div>
-                                        <div
-                                            class="image_frame image_item no_link scale-with-grid alignnone no_border width">
-                                            <div style="margin-top: 50px;" class="image_wrapper"><img
-                                                    class="scale-with-grid"
-                                                    src="/public/images/empowerment-coaching.webp" /> </div>
+                                        <div class="image_frame image_item no_link scale-with-grid alignnone no_border service_img">
+                                            <div style="margin-top: 50px;" class="image_wrapper">
+                                                <img class="scale-with-grid" src="/public/images/empowerment-coaching.webp" />
+                                            </div>
                                         </div>
 
                                     </div>
-                                    <!-- </div> -->
-                                    <div class="services"id="job_seeker" style="background-color: #e6eff7; margin-bottom: 20px;">
+                                    <div class="services" id="job_seeker"
+                                        style="background-color: #e6eff7; margin-bottom: 20px;">
                                         <div
-                                            class="image_frame image_item no_link scale-with-grid alignnone no_border width">
+                                            class="image_frame image_item no_link scale-with-grid alignnone no_border service_img">
                                             <div style="margin-top: 50px;" class="image_wrapper"><img
                                                     class="scale-with-grid" src="/public/images/job-seeker.webp" />
                                             </div>
                                         </div>
                                         <div class="column_attr align_center width">
-                                            <hr class="no_line" style="margin: 0 auto 30px;" />
-                                            <h4 style="color: #000; width: 100%;">JOB SEEKER SUPPORT</h4>
-                                            <hr class="no_line" style="margin: 0 auto 30px;" />
+                                            <div class="group">
+                                                <h4 class="first">JOB SEEKER </h4>
+                                                <h4 class="sec">SUPPORT </h4>
+                                            </div>
+
                                             <p class="service_text">
                                                 For job seekers, we're not just a service; we're your partners in
                                                 success. Our guidance, preparation, and personalized job matching
