KM-1262 book a call button

--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
                                         <h1 style="color: #000;">Welcome to MetanoiaHR</h1>
                                         <h2 style="color: #000;">Elevating Your Business through Strategic HR Solutions.
                                         </h2>
-                                        <p style="color: #000;">
+                                        <p style="color: #000; font-size: 16px;">
                                             At MetanoiaHR, we're not just an HR company – we're your partners in growth.
                                             Our mission is to empower small and medium-sized businesses across North
                                             America to unlock their true potential. By tackling the challenges of human
@@ -113,10 +113,10 @@
                                             productivity, sustained growth, and unparalleled success.
                                         </p>
                                         <hr class="no_line" style="margin: 0 auto 30px;" />
-                                        <a class="button  button_theme button_js"
+                                        <a class="button  button_theme button_js"style="border-radius: 50px;"
                                             href="https://calendly.com/metanoiahr/metanoia-chat-with-abdullah"><span
                                                 class="button_label"
-                                                style="background-color: #000; color: #fff;border-radius: 5%;">Book a
+                                                style="background-color: #000; color: #fff; font-size: 18px;">Book a
                                                 Call</span></a>
                                     </div>
 
@@ -330,11 +330,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <center>
-                                    <a class="button button_js"
-                                        href="https://calendly.com/metanoiahr/metanoia-chat-with-abdullah"><span
-                                            class="button_label">Book a Call</span></a>
-                                </center>
+                                <!-- <center> -->
+                                    <a class="button button_js" style="border-radius: 50px;"
+                                        href="https://calendly.com/metanoiahr/metanoia-chat-with-abdullah">
+                                        <span class="button_label" >Book a Call
+                                        </span></a>
+                                <!-- </center> -->
                             </div>
                         </div>
                         <div class="section mcb-section" style="padding-top:100px; padding-bottom:60px;">
